--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Manny Tribute Page</title>
+	<title>Manny Pacquiao Tribute Page</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
@@ -119,7 +119,8 @@
 					<mark class="text-primary">Highlights</mark>: Lost WBO welterweight title
 For WBA (Super), WBC, The Ring, and lineal welterweight titles <br>
 					<mark class="text-primary">Opponent</mark>: Floyd Mayweather Jr. <br>
-					<mark class="text-primary">Record</mark>: Loss by UD (57-6–2)<br><br>			
+					<mark class="text-primary">Record</mark>: Loss by UD (57-6–2)<br><br>		
+				</li>
 			</ul>
 			</div>
 			
