--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ For WBA (Super), WBC, The Ring, and lineal welterweight titles <br>
 				
 				<li><mark class="text-primary">Date</mark>: Apr 9, 2016 <br>
 					<mark class="text-primary">Highlights</mark>: Won vacant WBO International and lineal welterweight titles <br>
-					<mark class="text-primary">Opponent</mark>: Vargas <br>
+					<mark class="text-primary">Opponent</mark>: jeff hornezek <br>
 					<mark class="text-primary">Record</mark>: Won by UD (59–6–2)<br><br>
 				</li>
 				
