total has been change

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Manny Pacquiao Tribute Page</title>
+	<title>Manny Pacquiao</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
@@ -17,7 +17,7 @@
 			<img style="box-shadow:4px 4px 8px 0 #222;" class="img-responsive img-thumbnail img-rounded center-block" src="https://lh3.googleusercontent.com/8d15SInU7rAg87hQTQdlhukpPg4cBIJ6BfR8egcRlBkmX9bMwwVoZ164ecHGnOpehXvcYrXt8gVkByLofJBZ-j3bBpdT7uDk1bVSLVU2i8BJF7_VgZSbFF6Ii7ZQvxZ2_4QrJnXUIimVR32EU30NNm0ijidYUoAFl5xG0OxcNjKYdO1xn7NpuztnINMnVcY1dT0GGuZRSXfbp3zGBgoY6VSklay0PjfgDdqH3XrIXPPPioY3J3V4EjTQhbVRbOtKvRyfUINzBu0bwzFULSQf-AbUdekkyMLCLu4dzLT-KAAvzEMOtbdv8D_d7BAr0qI2wjECcW4RU0o0HpPS3Q4amz8swEDw29yY8yxqvzHREHFd-1CfT4xERzE3_czsoxYVSSsJScx5p9UkmhAKTNk5k7fEDtZk7g0ZF9E0N0U93EsFjf-BSPA4GYmMme0iwWOVh9VrQAMGRDwzeh271iRx5hgTP2ro6vogpGhi_YJLaRD9HPAa0pRA0JUWudicag3PBHheNhdhxF8vmOgNJ1mfonH9QYTnI6G5GW7qwIyAdF_H0G7uQdyXfnP2mDV6D0hO5mlubur4PlQnxvDDJ03WZmijuE9gOHrwI2g-Ic_CyQkE95o=w380-h638-no" alt="Manny Pacquiao ">
 			<div class="caption text-center">The first boxer in history to win ten world titles in eight different weight divisions.</div></div>
 	
-			<h3 class="text-center">Total fights: 67</h3>
+			<h3 class="text-center">Total 67</h3>
 			<div class="row">
 				<div class="col-xs-4">
 				  <h4 class="text-center text-primary">Win</h4>
@@ -131,7 +131,7 @@ For WBA (Super), WBC, The Ring, and lineal welterweight titles <br>
 				
 				<li><mark class="text-primary">Date</mark>: Apr 9, 2016 <br>
 					<mark class="text-primary">Highlights</mark>: Won vacant WBO International and lineal welterweight titles <br>
-					<mark class="text-primary">Opponent</mark>: Lebron <br>
+					<mark class="text-primary">Opponent</mark>: Lebron james <br>
 					<mark class="text-primary">Record</mark>: Won by UD (59–6–2)<br><br>
 				</li>
 				
